[package]
name = "mediaproxy-server"
version = "0.1.2"
authors = ["Åke Amcoff <ake.amcoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = "0.23"
reqwest = { version = "0.10", features = ["blocking"] }
actix-web = "2"
actix-rt = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
futures = "0.3"
mime = "0.3"
num = "0.3"
custom_error = "1.7"
libwebp-sys = "0.3"
dns-lookup = "1.0"
clap = "2"
mediaproxy-common = "0.1"
